argocd/argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - argocd.k8s.integratn.tech
    secretName: argocd-tls
  rules:
  - host: argocd.k8s.integratn.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argo-server-ingress
#   namespace: argocd
#   annotations:
#     # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#     cert-manager.io/cluster-issuer: letsencrypt-prod
# spec:
#   ingressClassName: "nginx"
#   tls:
#   - hosts:
#     - argo.k8s.integratn.tech
#     secretName: argo-tls
#   rules:
#   - host: argo.k8s.integratn.tech
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argo-server
#             port:
#               name: web
